--- a/horizontal.less
+++ b/horizontal.less
@@ -1,8 +1,8 @@
 /* horizontal */
-@width:287px;
-@numberOfItems: 4;
-@visibleItemDuration: 4s;
-@transitionDuration: 1s;
+@width:287px; // width of the carousel
+@numberOfItems: 4; // the number of items in the carousel
+@visibleItemDuration: 4s; // time during which a carousel item is fully visible
+@transitionDuration: 1s; // duration of the transition between two carousel items
 
 @carouselPeriod: @numberOfItems * (@visibleItemDuration + @transitionDuration);
 
@@ -10,19 +10,24 @@
     width: @width;
     position: relative;
     overflow: hidden;
+    .items {
+        width: @width * @numberOfItems;
+
+        -webkit-animation: hscroll @carouselPeriod infinite;
+        -moz-animation: hscroll @carouselPeriod infinite;
+        -ms-animation: hscroll @carouselPeriod infinite;
+        animation: hscroll @carouselPeriod infinite;
+    }
+    .item {
+        margin: 0;
+        float:left;
+        width: @width;
+    }
 }
-.horizontal .items {
-    width: @width * @numberOfItems;
-}
-.horizontal img {
-    margin: 0;
-    float:left;
-    width: @width;
-}
-/* For CSS animations you need to define the parameters for every screen sizes. There is no overriding of these settings. Animations can not be overridden in CSS */
-.horizontal .items {
-    .css3_animation(hscroll @carouselPeriod infinite);
-}
+/*
+/* The keyframes calculations are based on assumption of 4 items in the carousel.
+/* You should notice the pattern for your own calculations.
+*/
 @-webkit-keyframes hscroll {
     0%, 18.75%  { margin-left: 0 }
     25%, 43.75% { margin-left: -1px * @width; }
@@ -34,13 +39,20 @@
     0%, 18.75%  { margin-left: 0 }
     25%, 43.75% { margin-left: -1px * @width; }
     50%, 68.75% { margin-left: -2px * @width; }
-    75%, 93.75% { margin-left: -3px * @width; }            
+    75%, 93.75% { margin-left: -3px * @width; }
     100%  { margin-left: 0 }
 }
 @-ms-keyframes hscroll {
     0%, 18.75%  { margin-left: 0 }
     25%, 43.75% { margin-left: -1px * @width; }
     50%, 68.75% { margin-left: -2px * @width; }
-    75%, 93.75% { margin-left: -3px * @width; }            
+    75%, 93.75% { margin-left: -3px * @width; }
+    100%  { margin-left: 0 }
+}
+@keyframes hscroll {
+    0%, 18.75%  { margin-left: 0 }
+    25%, 43.75% { margin-left: -1px * @width; }
+    50%, 68.75% { margin-left: -2px * @width; }
+    75%, 93.75% { margin-left: -3px * @width; }
     100%  { margin-left: 0 }
 }
