--- a/colorDissolve.css
+++ b/colorDissolve.css
@@ -6,68 +6,52 @@
   height: 430px;
   background: #000000;
 }
-.colorDissolve img {
+.colorDissolve .item {
   position: absolute;
   left: 0;
   right: 0;
   opacity: 0;
-  -webkit-animation: colorDissolve 20s linear infinite;
-  -moz-animation: colorDissolve 20s linear infinite;
-  -ms-animation: colorDissolve 20s linear infinite;
+  -webkit-animation: colorDissolve 24s linear infinite;
+  -moz-animation: colorDissolve 24s linear infinite;
+  -ms-animation: colorDissolve 24s linear infinite;
+  animation: colorDissolve 24s linear infinite;
 }
-.colorDissolve img:nth-child(2) {
-  -webkit-animation-delay: 5s;
-  -moz-animation-delay: 5s;
-  -ms-animation-delay: 5s;
+.colorDissolve .item:nth-child(2) {
+  -webkit-animation-delay: 6s;
+  -moz-animation-delay: 6s;
+  -ms-animation-delay: 6s;
+  animation-delay: 6s;
 }
-.colorDissolve img:nth-child(3) {
-  -webkit-animation-delay: 10s;
-  -moz-animation-delay: 10s;
-  -ms-animation-delay: 10s;
+.colorDissolve .item:nth-child(3) {
+  -webkit-animation-delay: 12s;
+  -moz-animation-delay: 12s;
+  -ms-animation-delay: 12s;
+  animation-delay: 12s;
 }
-.colorDissolve img:nth-child(4) {
-  -webkit-animation-delay: 15s;
-  -moz-animation-delay: 15s;
-  -ms-animation-delay: 15s;
+.colorDissolve .item:nth-child(4) {
+  -webkit-animation-delay: 18s;
+  -moz-animation-delay: 18s;
+  -ms-animation-delay: 18s;
+  animation-delay: 18s;
 }
-/* If you plan to support Safari 4 for any reason, you should have 0% and 100% frames */
+/*
+/* The keyframes calculations are based on assumption of 4 items in the carousel.
+/* You should notice the pattern for your own calculations.
+*/
+/* If you plan to support Safari 4 for any reason, you *must* have 0% and 100% frames */
 @-webkit-keyframes colorDissolve {
-  0%,
-  25%,
-  100% {
-    opacity: 0;
-  }
-  2.5%,
-  22.5% {
-    opacity: 1;
-  }
+    0%, 25%, 100% { opacity: 0; }
+    2.5%, 22.5% { opacity: 1;}    
 }
 @-moz-keyframes colorDissolve {
-  0%,
-  25%,
-  100% {
-    opacity: 0;
-  }
-  2.5%,
-  22.5% {
-    opacity: 1;
-  }
-}
+    0%, 25%, 100% { opacity: 0; }
+    2.5%, 22.5% { opacity: 1;}    
+}    
 @-ms-keyframes colorDissolve {
-  0%,
-  25%,
-  100% {
-    opacity: 0;
-  }
-  2.5%,
-  22.5% {
-    opacity: 1;
-  }
+    0%, 25%, 100% { opacity: 0; }
+    2.5%, 22.5% { opacity: 1;}    
 }
-@media only screen and (min-width: 480px) {
-  .colorDissolve {
-    width: 333px;
-    height: 500px;
-    background: #000000;
-  }
+@keyframes colorDissolve {
+    0%, 25%, 100% { opacity: 0; }
+    2.5%, 22.5% { opacity: 1;}    
 }
