--- a/colorDissolve.less
+++ b/colorDissolve.less
@@ -1,7 +1,10 @@
 /* colorDissolve  */
-@width:287px;
-@height: 430px;
-@dissolveColor: #000;
+@width:287px; // width of the carousel
+@height: 430px; // height of the carousel
+@numberOfItems: 4; // the number of items in the carousel
+@visibleItemDuration: 4s; // time during which a carousel item is fully visible
+@transitionDuration: 1s; // duration of the transition between two carousel items
+@dissolveColor: #000; // a color to dissolve through
 
 .colorDissolve {
     position:relative;
@@ -9,32 +12,44 @@
     width:@width;
     height: @height;
     background: @dissolveColor;
+    
+    .item {
+        position:absolute;
+        left: 0;
+        right:0;
+        opacity: 0;
+        
+        -webkit-animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
+        -moz-animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
+        -ms-animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
+        animation: colorDissolve (@visibleItemDuration + 2 * @transitionDuration)*@numberOfItems linear infinite;
+        
+        &:nth-child(2) {
+            -webkit-animation-delay: @visibleItemDuration + 2 * @transitionDuration;
+            -moz-animation-delay: @visibleItemDuration + 2 * @transitionDuration;
+            -ms-animation-delay: @visibleItemDuration + 2 * @transitionDuration;
+            animation-delay: @visibleItemDuration + 2 * @transitionDuration;
+        }
+        &:nth-child(3) {
+            -webkit-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
+            -moz-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
+            -ms-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
+            animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*2;
+        }        
+        &:nth-child(4) {
+            -webkit-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
+            -moz-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
+            -ms-animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
+            animation-delay: (@visibleItemDuration + 2 * @transitionDuration)*3;
+        }
+    }
 }
-.colorDissolve img {
-    position:absolute;
-    left: 0;
-    right:0;
-    opacity: 0;
-    -webkit-animation: colorDissolve 20s linear infinite;
-    -moz-animation: colorDissolve 20s linear infinite;
-    -ms-animation: colorDissolve 20s linear infinite;
-}
-.colorDissolve img:nth-child(2) {
-    -webkit-animation-delay: 5s;
-    -moz-animation-delay: 5s;
-    -ms-animation-delay: 5s;
-}
-.colorDissolve img:nth-child(3) {
-    -webkit-animation-delay: 10s;
-    -moz-animation-delay: 10s;
-    -ms-animation-delay: 10s;
-}        
-.colorDissolve img:nth-child(4) {
-    -webkit-animation-delay: 15s;
-    -moz-animation-delay: 15s;
-    -ms-animation-delay: 15s;
-}
-/* If you plan to support Safari 4 for any reason, you should have 0% and 100% frames */
+
+/*
+/* The keyframes calculations are based on assumption of 4 items in the carousel.
+/* You should notice the pattern for your own calculations.
+*/
+/* If you plan to support Safari 4 for any reason, you *must* have 0% and 100% frames */
 @-webkit-keyframes colorDissolve {
     0%, 25%, 100% { opacity: 0; }
     2.5%, 22.5% { opacity: 1;}    
@@ -47,15 +62,7 @@
     0%, 25%, 100% { opacity: 0; }
     2.5%, 22.5% { opacity: 1;}    
 }
-
-@media only screen and (min-width: 480px) {
-@width:333px;
-@height: 500px;
-@dissolveColor: #000;
-
-.colorDissolve {
-    width:@width;
-    height: @height;
-    background: @dissolveColor;
-}
+@keyframes colorDissolve {
+    0%, 25%, 100% { opacity: 0; }
+    2.5%, 22.5% { opacity: 1;}    
 }
